# qrp

./: .env.example  .gitignore  OVERNIGHT.md  README.md  package-lock.json  package.json  platform.toml  pyproject.toml  sqitch.conf
_bmad/: config.toml
_bmad-output/brainstorming/: brainstorming-session-2026-06-07-112759.md  brainstorming-session-2026-06-07-124906.md  brainstorming-session-2026-06-07-151227.md  brainstorming-session-2026-06-07-195212.md  brainstorming-session-2026-06-08-123427.md  brainstorming-session-2026-06-08-230821.md  brainstorming-session-2026-06-22-211134.md  brainstorming-session-2026-06-23-224317.md
_bmad-output/implementation-artifacts/: 1-10-symbology-scd-transitions.md  1-8-gics-classification.md  1-9-review-queue-gating.md  2-1-trading-calendar.md  2-10-explicit-range-reload.md  2-11-unified-load.md  2-2-source-abstraction.md  2-3-raw-price-storage.md  2-4-anomaly-annotation.md  2-5-load-orchestration.md  2-6-run-logging.md  2-8-sweep.md  2-9-disaster-recovery.md  3-1-window-spec.md  3-2-adjusted-view.md  3-3-perf-spike.md  3-4-fact-returns-pr.md  3-5-total-return.md  3-6-incremental-gate.md  3-7-survivorship-invariant.md  3-8-accuracy-harness.md  3.1-ext-return-window-expansion.md  3.2-ext-price-extremes-52w.md  A-1-analytics-boundaries.md  B1-instrument-identity.md  B2-index-levels.md  B3-index-returns-alpha.md  B4-msci-file-import.md  B5-universe-benchmark-link.md  B6-canonical-index-figis.md  B7-identity-key-bridge.md  C-1-console-submenus.md  C-2-macro-comparison.md  E1-eod-orchestration.md  O-2-operate-hardening.md  O-3-actuation-origin-guard.md  O-4-error-envelope.md  Q5-2-time-weighted-returns-and-weight-history.md  Q6-3-Q9-4-strategy-spec-signal-backtests.md  Q7-3-Q7-4-optimiser-constraints-loop-close.md  (+124 more)
_bmad-output/planning-artifacts/: architecture-qrp-structure.md  architecture-qrp.md  architecture.md  epics-fx.md  epics-qrp-roadmap.md  epics-qrp.md  epics-universe-layer.md  epics-validation.md  epics.md  sprint-change-proposal-2026-06-08.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/web/: next.config.ts  package.json  vitest.config.ts  vitest.setup.ts
db/: sqitch.plan
db/backtest/: sqitch.plan
db/deploy/: altdata.sql  backtest.sql  jobs.sql  macro.sql  optimiser.sql  portfolios.sql  relocate_altdata.sql  relocate_backtest.sql  relocate_macro.sql  relocate_optimiser.sql  relocate_qrp.sql  relocate_signal.sql  signal.sql
db/macro/: sqitch.conf
db/optimiser/: sqitch.plan
db/portfolios/: sqitch.conf  sqitch.plan
db/qrp/: 0001-portfolios.sql  0002-jobs.sql  0003-macro.sql  0004-signal.sql  0005-backtest.sql  0006-optimiser.sql  0007-altdata.sql
db/qrp_core/: sqitch.plan
db/revert/: altdata.sql  backtest.sql  jobs.sql  macro.sql  optimiser.sql  portfolios.sql  relocate_altdata.sql  relocate_backtest.sql  relocate_macro.sql  relocate_optimiser.sql  relocate_qrp.sql  relocate_signal.sql  signal.sql
db/signal/: sqitch.conf  sqitch.plan
db/spikes/: duckdb-federation-findings.md  duckdb-federation-spike.md  run_spike_live.py  run_spike_native.py
db/verify/: altdata.sql  backtest.sql  jobs.sql  macro.sql  optimiser.sql  portfolios.sql  relocate_altdata.sql  relocate_backtest.sql  relocate_macro.sql  relocate_optimiser.sql  (+3 more)
docs/: architecture-modules.md  data-conventions.md  disaster-recovery.md  runbook.md  schema-contract.md  universe-maintenance.md
scripts/: dev.mjs
services/api/: pyproject.toml
services/api/src/qrp_api/: __init__.py  config.py  db.py  main.py  sym_contract.py
services/api/src/qrp_api/modules/: __init__.py
services/api/src/qrp_api/modules/altdata/: __init__.py  gateway.py  ingest.py  router.py
services/api/src/qrp_api/modules/analytics/: gateway.py  router.py
services/api/src/qrp_api/modules/backtest/: engine.py  gateway.py  router.py
services/api/src/qrp_api/modules/data_monitor/: __init__.py  dagster_runs.py  eod.py  router.py
services/api/src/qrp_api/modules/lineage/: __init__.py  router.py
services/api/src/qrp_api/modules/macro/: __init__.py  gateway.py  ingest.py  router.py  sources.py
services/api/src/qrp_api/modules/operate/: executor.py  gateway.py  router.py
services/api/src/qrp_api/modules/optimiser/: __init__.py  engine.py  gateway.py  router.py
services/api/src/qrp_api/modules/portfolios/: __init__.py  gateway.py  router.py
services/api/src/qrp_api/modules/signal/: __init__.py  compute.py  gateway.py  router.py
services/api/src/qrp_api/modules/sym/: __init__.py  freshness.py  gateway.py  news.py  quotes.py  router.py
services/api/tests/: test_analytics_boundaries.py  test_analytics_live_pnl.py  test_analytics_quotes_batch.py  test_data_monitor_eod.py  test_error_envelope.py  test_fx_matrix_route.py  test_indexes_route.py  test_indices_route.py  test_macro_categories_route.py  test_origin_guard.py  test_portfolio_composition.py  test_portfolio_exposure.py  test_portfolio_pnl.py  test_portfolio_returns_coverage.py  test_readonly_role.py  test_sym_explorer.py  test_sym_live_heatmap.py  test_sym_news.py  test_sym_overview.py  test_sym_quotes.py  test_sym_security_prices.py  test_sym_universe_coverage.py  test_topology_discipline.py  test_twr_weight_history.py
tools/: deploy_all.py  duckdb_spike.py  migrate_equity_data.py  migrate_indices_data.py  provision_readonly.py
(+142 files in other folders)
