# QRP monorepo — uv workspace root (virtual; not an installable package).
[project]
name = "qrp"
version = "0.0.0"
description = "QRP (Quant Research Platform) monorepo — console + API over the sym warehouse"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
# Explicit members (not packages/* — the reserved packages/sym stub has no pyproject yet).
# Add each package here as it's carved out.
members = [
    "services/api",
    "packages/macro",
    "packages/portfolios",
    "packages/signals",
    "packages/optimiser",
    "packages/backtest",
    "packages/altdata",
    "packages/analytics",
    "packages/operate",
    "packages/sym",
]

[tool.ruff]
line-length = 100
