# QRP monorepo — uv workspace root (virtual; not an installable package).
[project]
name = "qrp"
version = "0.0.0"
description = "QRP (Quant Research Platform) monorepo — a flat set of standalone packages (sym, macro, signals, …) composed by a gateway + console"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
# Explicit members (not packages/* — the reserved packages/sym stub has no pyproject yet).
# Add each package here as it's carved out.
members = [
    "services/api",
    "packages/macro",
    "packages/portfolios",
    "packages/signals",
    "packages/optimiser",
    "packages/backtest",
    "packages/altdata",
    "packages/analytics",
    "packages/operate",
    "packages/sym",
    "packages/lineage",
    "packages/rates",
    "packages/commodities",
    "packages/fx",
]

[dependency-groups]
dev = [
    "duckdb>=1.5",   # tools/duckdb_spike.py — the federation live-attach proof (QH.5)
    "psycopg[binary]>=3.2",  # tools/deploy_all.py
]

[tool.ruff]
line-length = 100

