[project]
name = "qrp-api"
version = "0.1.0"
description = "QRP API — FastAPI, per-module routers over the sym warehouse (consumer of sym)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrp_api"]
