[project]
name = "qrp-api"
version = "0.1.0"
description = "QRP API — FastAPI, per-module routers over the sym warehouse (consumer of sym)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    # the standalone packages (workspace members) — the gateway mounts each one's router
    "macro",
    "portfolios",
    "signals",
    "optimiser",
    "backtest",
    "altdata",
    "analytics",
    "operate",
]

[tool.uv.sources]
macro = { workspace = true }
portfolios = { workspace = true }
signals = { workspace = true }
optimiser = { workspace = true }
backtest = { workspace = true }
altdata = { workspace = true }
analytics = { workspace = true }
operate = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrp_api"]
