[project]
name = "qrp-api"
version = "0.1.0"
description = "QRP API — FastAPI gateway mounting each enabled package's router (sym is a peer)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    # the standalone packages (workspace members) — the gateway mounts each one's router
    "macro",
    "rates",
    "commodities",
    "fx",
    "universe",
    "portfolios",
    "signals",
    "optimiser",
    "backtest",
    "altdata",
    "analytics",
    "operate",
    "lineage",
]

[tool.uv.sources]
macro = { workspace = true }
rates = { workspace = true }
commodities = { workspace = true }
fx = { workspace = true }
universe = { workspace = true }
portfolios = { workspace = true }
signals = { workspace = true }
optimiser = { workspace = true }
backtest = { workspace = true }
altdata = { workspace = true }
analytics = { workspace = true }
operate = { workspace = true }
lineage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrp_api"]

[dependency-groups]
# TestClient's transitive requirement (starlette >=1.2 uses httpx2).
dev = [
    "httpx2>=2.3.0",
]
